manifests/grpc-example/00_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    linkerd.io/inject: enabled
  labels:
    kubernetes.io/metadata.name: dune
  name: dune
