manifests/grpc-example/01_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dune-quote-service
  namespace: dune
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dune-quote-service
  template:
    metadata:
      labels:
        app: dune-quote-service
    spec:
      containers:
        - image: gamussa/reactive-quote-service:0.0.3
          imagePullPolicy: IfNotPresent
          name: dune-quote-service
          ports:
            - containerPort: 9001
